[package]
edition = "2024"
license = "MIT"
name    = "zed_biome"
publish = false
version = "0.1.4"

[lib]
crate-type = ["cdylib"]
path       = "src/biome.rs"

[dependencies]
log                = "0.4.28"
tracing            = "0.1.41"
tracing-subscriber = "0.3.20"
zed_extension_api  = "0.6.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

